Added sass and eslint and initial urls/svgs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "allowUnreachableCode": false,
     "declaration": false,
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "lib": [
       "dom",
       "es2022"
