--- a/package.json
+++ b/package.json
@@ -32,19 +32,24 @@
     "loader/"
   ],
   "scripts": {
-    "build": "stencil build",
+    "build": "npm run lint && stencil build",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "lint": "eslint"
   },
   "devDependencies": {
     "@stencil/core": "^4.27.1",
+    "@stencil/eslint-plugin": "^1.0.0",
+    "@stencil/sass": "^3.2.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.5",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
-    "puppeteer": "^24.3.0"
+    "jiti": "^2.4.2",
+    "puppeteer": "^24.3.0",
+    "typescript-eslint": "^8.31.0"
   },
   "license": "MIT"
 }
