--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nvq-brands-nav-bar",
+  "name": "@nvisionative/nvq-brands-nav-bar",
   "version": "0.1.0-beta.2",
   "description": "nvQuickBrandsNavBar is a Stencil component that provides a navigation bar for multi-brand web properties.",
   "main": "dist/index.cjs.js",
